--- a/index.html
+++ b/index.html
@@ -24,23 +24,28 @@
       <br>
       <label for="age"><b>Age-group:</b></label><br>
       <input type="radio" id="Age-group-1" name="age" value="Age-group-1">
-      <label for="Age-group-1">5-8</label><br>
+      <label for="Age-group">5-8</label><br>
       <input type="radio" id="Age-group-2" name="age" value="Age-group-2">
-      <label for="Age-group-2">8-11</label><br>
+      <label for="Age-group">8-11</label><br>
       <input type="radio" id="Age-group-3" name="age" value="Age-group-3">
-      <label for="Age-group-3">11-14</label><br>
+      <label for="Age-group">11-14</label><br>
       <br>
       <label for="q1"><b>Are you enjoying playing on Didi Games !!</b></label><br>
       <input type="radio" id="rating" value="y">
-      <label for="y">Yes</label><br>
+      <label for="y/n">Yes</label><br>
       <input type="radio" id="rating" value="n">
-      <label for="n">No</label><br>
+      <label for="y/n">No</label><br>
       <br>
-      <label for="suggest"><b>Suggestions for how can we improve ourselves ?</b><label><br>
-      <input type="text" id="suggest" name="suggest"><br>
+      <label for="suggest"><b>Suggestions for how can we improve ourselves ?</b><label><br><br>
+      <textarea id="suggest" rows="4" cols="50"></textarea><br>
       <br>
       <input type="submit">
     </form>
+    <br>
+  </div>
+  <div class="footer">
+    <p><b>&#169; Copyright by Srishti</b><br>
+    Made with &#10084;</p>
   </div>
 </body>
 </html>
